--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -35,7 +35,7 @@
     <button id="btnGo">访问</button>
   </div>
   <div class="box">
-    <span>切换线路:</span>
+    <span>节点:</span>
     <select id="selNode"></select>
   </div>
   <div class="box" id="list">
