--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -22,7 +22,7 @@
       width: 100%;
       font-size: 1.5em;
       background-color: #4caf50;
-      color: #ff;
+      color: #fff;
     }
     #list a {
       margin: 1em;
@@ -32,13 +32,14 @@
 				padding :2em 0;
     }
      #foot a {
-        margin: 2px;
-				color: #262626;
-				font-weight: 500;
+        margin: 3px;
+				color: ##f4511e;
+				font-weight: 700;
+				text-decoration: none;
     }
     #foot p {
 				color: #333;
-				font-weight: 800;
+				font-weight: 500;
     }
     @media(max-width: 991px) {
     body {
