--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -16,7 +16,7 @@
 
     body,html {
 
-      padding: 0 1em;
+      padding: 3px;
 
     }
 
@@ -68,7 +68,7 @@
 
 				margin: 3px;
 
-				color: ##ff80ab;
+				color: #4caf50;
 
 				font-weight: 700;
 
