--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -117,7 +117,7 @@
 
   <div id="foot">
 
-  <p>代理程序基于<a href="https://gitee.com/mirrors/jsproxy">JSproxy</a>,本站由<a href="http://svvme.com/">Pixcat</a>搭建</p>
+  <p>代理程序基于<a href="https://github.com/EtherDream/jsproxy">JSproxy</a>,本站由<a href="http://svvme.com/">Pixcat</a>搭建</p>
 
   </div>
 
