--- a/assets/index_v3.html
+++ b/assets/index_v3.html
@@ -1,373 +1,458 @@
-<!doctype html>
-
+<!Doctype html>
 <html>
-
-<head>
-
-  <title>帮你古狗</title>
-
-  <meta charset="utf-8">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-
-  <base target="_blank">
-
-  <style>
-
-    body,html {
-
-      padding: 3px;
-
-    }
-
-    .box {
-
-      margin-top: 1em;
-
-    }
-
-    #txtURL {
-
-      width: 100%;
-
-      height: 2em;
-
-      text-indent: 0.5em;
-
-      padding: 0.25em 0;
-
-    }
-
-    #btnGo {
-
-      width: 100%;
-
-      font-size: 1.5em;
-
-      background-color: #4caf50;
-
-      color: #fff;
-
-    }
-
-    #list a {
-
-      margin: 1em;
-
-    }
-
-    #foot {
-
-        text-align: center;
-
-		padding :2em 0;
-
-    }
-
-     #foot a {
-
-				margin: 3px;
-
-				color: #4caf50;
-
-				font-weight: 700;
-
-				text-decoration: none;
-
-    }
-
-    #foot p {
-
-				color: #333;
-
-				font-weight: 500;
-
-    }
-
-
-  </style>
-
-</head>
-
-<body>
-
-  <div class="box">
-
-    <input id="txtURL" type="text" value="www.v2ex.com" autofocus>
-
-  </div>
-
-  <div class="box">
-
-    <button id="btnGo">访问</button>
-
-  </div>
-
-  <div class="box">
-
-    <span>节点:</span>
-
-    <select id="selNode"></select>
-
-  </div>
-
-  <div class="box" id="list">
-
-  </div>
-
-  <div id="foot">
-
-  <p>代理程序基于<a href="https://github.com/EtherDream/jsproxy">JSproxy</a>,本站由<a href="http://svvme.com/">Pixcat</a>搭建</p>
-
-  </div>
-
-  <script>
-
-    const PAGE_CONF_SET = 110
-
-    const PAGE_CONF_GET = 111
-
-
-
-    const SW_CONF_RETURN = 112
-
-    const SW_CONF_CHANGE = 113
-
-
-
-    const PAGE_READY_CHECK = 200
-
-    const SW_READY = 201
-
-
-
-    const sw = navigator.serviceWorker
-
-
-
-
-
-    sw.addEventListener('message', onSwMsg)
-
-    sendMsgToSw(PAGE_READY_CHECK)
-
-
-
-    btnGo.onclick = function() {
-
-      const text = txtURL.value.trim()
-
-      if (text) {
-
-        const url = './-----' + text
-
-        open(url, '_blank', 'noopener,noreferrer')
-
-      }
-
-    }
-
-    txtURL.onkeypress = function(e) {
-
-      if (e.keyCode === 13) {
-
-        btnGo.onclick()
-
-      }
-
-    }
-
-    txtURL.setSelectionRange(0, txtURL.value.length)
-
-
-
-
-
-    function onSwMsg(e) {
-
-      const [cmd, msg] = e.data
-
-
-
-      switch (cmd) {
-
-      case SW_CONF_RETURN:
-
-        conf = msg
-
-        showConf()
-
-        break
-
-
-
-      case SW_CONF_CHANGE:
-
-        conf = msg
-
-        updateSelected()
-
-        break
-
-
-
-      case SW_READY:
-
-        console.log('sw ready')
-
-        showIcons()
-
-        sendMsgToSw(PAGE_CONF_GET)
-
-        break
-
-      }
-
-    }
-
-
-
-    function onSwFail(err) {
-
-      txtURL.value = err
-
-    }
-
-
-
-    selNode.onchange = function() {
-
-      const item = this.options[this.selectedIndex]
-
-      const node = item.value
-
-      conf.node_default = node
-
-      sendMsgToSw(PAGE_CONF_SET, conf)
-
-    }
-
-
-
-    function sendMsgToSw(cmd, val) {
-
-      const ctl = sw.controller
-
-      if (!ctl) {
-
-        console.log('ctl is null')
-
-        return
-
-      }
-
-      ctl.postMessage([cmd, val])
-
-    }
-
-
-
-    const SITE_LIST = [
-
-      ['google', ''],
-
-      ['youtube', ''],
-
-      ['twitter', 'twitter.com/'],
-
-      ['flickr', ''],
-
-      ['quora', 'www.quora.com/topic/JavaScript-programming-language'],
-
-      ['twitch', 'www.twitch.tv/'],
-
-      ['reddit', ''],
-
-      ['wiki', 'zh.wikipedia.org/'],
-
-      ['gist', 'gist.github.com/'],
-
-      ['facebook', 'facebook.com/'],
-
-    ]
-
-
-
-    function showIcons() {
-
-      list.innerHTML = SITE_LIST.map(v => {
-
-        let [id, url] = v
-
-        url = url || `www.${id}.com/`
-
-        return `\
-
-<a rel="noopener noreferrer" href=./-----https://${url}>\
-
-<img width=128 height=128 src=__sys__/assets/ico/${id}.png></a>`
-
-      }).join('')
-
-    }
-
-
-
-    function addNodeItem(id, text) {
-
-      const optEl = document.createElement('option')
-
-      optEl.id = '--' + id
-
-      optEl.text = text
-
-      optEl.value = id
-
-      selNode.appendChild(optEl)
-
-    }
-
-
-
-    function updateSelected() {
-
-      const id = conf.node_default
-
-      const item = document.getElementById('--' + id)
-
-      if (item) {
-
-        item.selected = true
-
-      } else {
-
-        console.warn('unknown node:', id)
-
-      }
-
-    }
-
-
-
-    function showConf() {
-
-      for (const [id, node] of Object.entries(conf.node_map)) {
-
-        if (!node.hidden) {
-
-          addNodeItem(id, node.label)
-
-        }
-
-      }
-
-      updateSelected()
-
-    }
-
-  </script>
-
-</body>
-
+	<head>
+		<title>iProxy</title>
+		<meta name="Keywords" content=""/>
+		<meta name="Description" content="Now, only a paper away from the world."/>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+		<link rel="stylesheet" href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/0.4.1/css/mdui.min.css">
+		<script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/mdui/0.4.1/js/mdui.min.js"></script>
+
+		<style type="text/css">
+			body {
+				background: #f3f4f7;
+			}
+
+			.searchbar_icon {
+				width: 36px;
+				height: 36px;
+				display: inline-block;
+				margin-left: 8px;
+				margin-right: 8px;
+				cursor: pointer;
+			}
+
+			.search_btn {
+				margin-left: 8px;
+				margin-right: 8px;
+			}
+
+			.searchbar_input_parent {
+				width: 100%;
+				display: inline-block;
+				height: 36px;
+				padding: 0;
+				margin-right: 8px;
+			}
+
+			.searchbar {
+				text-align: center;
+				margin-bottom: 12px;
+				margin-top: 8px;
+				padding-left: 15px;
+				width: 75%;
+				background-color: #fff;
+				border-radius: 50px;
+				-webkit-transition: all .3s cubic-bezier(0, 0, .2, 1);
+				transition: all .3s cubic-bezier(0, 0, .2, 1);
+			}
+
+			.mdui-headroom-unpinned-toolbar .searchbar {
+				width: 100%;
+				border-radius: 0px;
+				margin-bottom: 0px;
+				margin-top: 0px;
+				padding-bottom: 8px;
+				padding-top: 8px;
+			}
+
+			.mdui-card i {
+				font-size: 22px;
+			}
+
+			@media (min-width: 600px) {
+				.mdui-appbar-with-toolbar {
+					padding-top: calc(64px + 52px) !important;
+				}
+
+			}
+
+			@media (max-width: 959px) and (orientation: landscape) {
+				.mdui-appbar-with-toolbar {
+					padding-top: calc(48px + 52px) !important;
+				}
+
+			}
+
+			.mdui-appbar-with-toolbar {
+				padding-top: calc(56px + 52px);
+			}
+
+			.website {
+				width: 85px;
+				display: inline-block;
+			}
+
+			.custom_website {
+				display: inline-block;
+			}
+
+			.websiteIcon {
+				width: 85px;
+				border-radius: 100%;
+			}
+
+			.websites {
+				padding: 0;
+				text-align: center;
+			}
+
+
+			@media screen and (min-width: 600px) {
+
+				.appbar {
+					background-color: #fff !important;
+					color: #000 !important;
+				}
+
+
+				.searchbar {
+					background-color: transparent !important;
+				}
+
+				.suggest {
+					top: 116px !important;
+				}
+
+			}
+
+
+			@media screen and (max-width: 600px) {
+				.mdcard {
+					padding-top: 16px;
+				}
+			}
+
+			.header {
+				height: 50px;
+			}
+
+			.appbar {
+				background-color: #333;
+				color: #fff;
+			}
+
+			.searchbar_input_parent>.mdui-textfield-input:not([disabled]):hover {
+				box-shadow: none;
+				border: 0;
+			}
+
+			.searchbar_input_parent>.mdui-textfield-input {
+				border: 0;
+			}
+
+			.searchbar_icon_img {
+				height: 36px;
+				width: 20px;
+			}
+
+			.suggest {
+				width: 100%;
+				position: absolute;
+				top: 108px;
+				color: #000;
+				z-index: 2;
+				background-color: #fff;
+				-webkit-transition: opacity .3s cubic-bezier(0, 0, .2, 1);
+				transition: opacity .3s cubic-bezier(0, 0, .2, 1);
+			}
+
+			.suggest[show=true] {
+				opacity: 1;
+				visibility: visible;
+			}
+
+			.suggest:not([show=true]) {
+				opacity: 0;
+				visibility: hidden;
+			}
+
+			.footer {
+				padding: 32px 0;
+			}
+
+			.footer span {
+				display: block;
+			}
+
+			.footer a {
+				margin: 2px;
+			}
+
+			.reBtn,
+			.edit_wrapper {
+				position: absolute;
+				right: 8px;
+			}
+
+			.copyright {
+				margin: 16px;
+			}
+
+
+			.empty_icon {
+				width: 100%;
+				font-size: 60px;
+				padding: 16px 0;
+			}
+
+			.empty_tip {
+				width: 100%;
+			}
+
+			.empty {
+				margin: 16px;
+			}
+
+			.addBtn_empty {
+				margin: 16px 0;
+			}
+
+			.custom_list:not(.edit) .remove_btn {
+				display: none;
+			}
+
+			.custom_list.edit .remove_btn {
+				z-index: 100;
+			}
+
+			.remove_btn {
+				position: absolute;
+				cursor: pointer;
+				border-radius: 3px;
+				background: none;
+				transition: .3s;
+			}
+		</style>
+	</head>
+
+	<body class="mdui-appbar-with-toolbar">
+		<div class="mdui-appbar mdui-appbar-fixed appbar mdui-appbar-scroll-toolbar-hide">
+			<div class="mdui-toolbar mdui-color-theme">
+				<button mdui-menu="{target: '#or'}" class="mdui-btn mdui-btn-icon mdui-ripple">
+					<i class="mdui-icon material-icons">menu</i>
+				</button>
+				<ul class="mdui-menu" id="or">
+					<li class="mdui-menu-item">
+						<a href="https://js.littletm.workers.dev" target="_blank">换源</a>
+					</li>
+				</ul>
+				<span class="mdui-typo-headline">iProxy</span>
+				<div class="mdui-toolbar-spacer"></div>
+			</div>
+			<form target="_blank" class="searchbar mdui-center mdui-valign mdui-ripple">
+				<div class="mdui-textfield searchbar_input_parent">
+					<input class="mdui-textfield-input" v-model="keyword" type="text" id="txtURL"
+						placeholder="输入域名、网址或搜索词" />
+				</div>
+				<button class="mdui-btn mdui-btn-icon mdui-ripple search_btn" id="btnGo"">
+						<i class=" mdui-icon material-icons mdui-text-color-black">&#xe163;</i>
+				</button>
+			</form>
+		</div>
+		<div class="mdui-m-t-2 mdui-container">
+			<div class="mdui-row">
+				<div class="mdui-col-xs-12 mdui-col-sm-8">
+					<div class="mdui-card">
+						<div class="mdui-card-header header">
+							<span>快速代理</span>
+						</div>
+						<div class="mdui-divider"></div>
+						<div class="mdui-card-content websites">
+							<ul class="mdui-list mdui-m-x-1">
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----http://www.github.com/">
+										<div><img src="__sys__/assets/ico/github.png" class="websiteIcon"></div>
+										<span>Github</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://www.v2ex.com/">
+										<div><img src="__sys__/assets/ico/v2ex.png" class="websiteIcon"></div>
+										<span>V2EX</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://www.pixiv.com/">
+										<div><img src="__sys__/assets/ico/pixiv.png" class="websiteIcon"></div>
+										<span>Pixiv</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://www.youtube.com/">
+										<div><img src="__sys__/assets/ico/youtube.png" class="websiteIcon"></div>
+										<span>Youtube</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://google.fuckcloudnative.io/">
+										<div><img src="__sys__/assets/ico/google.png" class="websiteIcon"></div>
+										<span>Google</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://www.twitter.com/">
+										<div><img src="__sys__/assets/ico/twitter.png" class="websiteIcon"></div>
+										<span>Twitter</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://www.facebook.com/">
+										<div><img src="__sys__/assets/ico/facebook.png" class="websiteIcon"></div>
+										<span>Facebook</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://mail.google.com/">
+										<div><img src="__sys__/assets/ico/gmail.png" class="websiteIcon"></div>
+										<span>Gmail</span>
+									</a></li>
+								<li class="website mdui-ripple mdui-m-x-1"><a target="_blank"
+										href="./-----https://www.reddit.com/">
+										<div><img src="__sys__/assets/ico/reddit.png" class="websiteIcon"></div>
+										<span>Reddit</span>
+									</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
+				<div class="mdui-col-xs-12 mdui-col-sm-4 mdcard">
+					<div class="mdui-card">
+						<div class="mdui-card-header header mdui-valign">
+							<span>一键直达</span>
+							<button class="mdui-btn mdui-btn-icon  mdui-typo-caption-opacity reBtn"
+								mdui-tooltip="{content: '暂时没有东西'}">
+								<i class="mdui-icon material-icons">&#xe8fd;</i>
+							</button>
+						</div>
+						<div class="mdui-divider"></div>
+						<ul class="mdui-list">
+							<a href="http://i.svvme.com/299.html">
+								<li class="mdui-list-item mdui-ripple" target="_blank">
+									<i
+										class="mdui-list-item-avatar mdui-icon material-icons mdui-color-black mdui-text-color-white">send</i>
+									<div class="mdui-list-item-content">
+										<div class="mdui-list-item-title">最新可用谷歌镜像</div>
+									</div>
+								</li>
+							</a>
+							<a href="http://i.svvme.com/proxy" target="_blank">
+								<li class="mdui-list-item mdui-ripple">
+									<i
+										class="mdui-list-item-avatar mdui-icon material-icons mdui-color-blue-600 mdui-text-color-white">&#xe2c7;</i>
+									<div class="mdui-list-item-content">
+										<div class="mdui-list-item-title">常用代理客户端整理</div>
+									</div>
+								</li>
+							</a>
+							<a href="https://raw.hellogithub.com/hosts" target="_blank">
+								<li class="mdui-list-item mdui-ripple">
+									<i
+										class="mdui-list-item-avatar mdui-icon material-icons mdui-color-yellow-600 mdui-text-color-white">save</i>
+									<div class="mdui-list-item-content">
+										<div class="mdui-list-item-title">Github 最新 HOSTS</div>
+									</div>
+								</li>
+							</a>
+
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<footer class="footer mdui-text-center mdui-typo">
+			程序基于<a href="https://github.com/EtherDream/jsproxy" target="_blank">Jsproxy</a>，前端来自<a
+				href="https://www.mdui.org/" target="_blank">MDUI</a>
+			<br>
+			&copy; 2022 js.svme.com
+		</footer>
+
+
+		<script type="text/javascript">
+			const PAGE_CONF_SET = 110
+			const PAGE_CONF_GET = 111
+			const SW_CONF_RETURN = 112
+			const SW_CONF_CHANGE = 113
+			const PAGE_READY_CHECK = 200
+			const SW_READY = 201
+			const sw = navigator.serviceWorker
+			sw.addEventListener('message', onSwMsg)
+			sendMsgToSw(PAGE_READY_CHECK)
+			btnGo.onclick = function() {
+				const text = txtURL.value.trim()
+				if (text) {
+					const url = './-----' + text
+					open(url, '_blank', 'noopener,noreferrer')
+				}
+			}
+			txtURL.onkeypress = function(e) {
+				if (e.keyCode === 13) {
+					btnGo.onclick()
+				}
+			}
+			txtURL.setSelectionRange(0, txtURL.value.length)
+
+			function onSwMsg(e) {
+				const [cmd, msg] = e.data
+				switch (cmd) {
+					case SW_CONF_RETURN:
+						conf = msg
+						showConf()
+						break
+					case SW_CONF_CHANGE:
+						conf = msg
+						updateSelected()
+						break
+					case SW_READY:
+						console.log('sw ready')
+						showIcons()
+						sendMsgToSw(PAGE_CONF_GET)
+						break
+				}
+			}
+
+			function onSwFail(err) {
+				txtURL.value = err
+			}
+			selNode.onchange = function() {
+				const item = this.options[this.selectedIndex]
+				const node = item.value
+				conf.node_default = node
+				sendMsgToSw(PAGE_CONF_SET, conf)
+			}
+
+			function sendMsgToSw(cmd, val) {
+				const ctl = sw.controller
+				if (!ctl) {
+					console.log('ctl is null')
+					return
+				}
+				ctl.postMessage([cmd, val])
+			}
+
+			function addNodeItem(id, text) {
+				const optEl = document.createElement('option')
+				optEl.id = '--' + id
+				optEl.text = text
+				optEl.value = id
+				selNode.appendChild(optEl)
+			}
+
+			function updateSelected() {
+				const id = conf.node_default
+				const item = document.getElementById('--' + id)
+				if (item) {
+					item.selected = true
+				} else {
+					console.warn('unknown node:', id)
+				}
+			}
+
+			function showConf() {
+				for (const [id, node] of Object.entries(conf.node_map)) {
+					if (!node.hidden) {
+						addNodeItem(id, node.label)
+					}
+				}
+				updateSelected()
+			}
+		</script>
+
+	</body>
 </html>
-
